--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "numpy>=2.1.2",
+    "pandas>=2.2.3",
+    "pathlib>=1.0.1",
+    "polars>=1.12.0",
+]
