add jupyter dependency

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,15 @@ dist/
 wheels/
 *.egg-info
 
+# Jupyter Notebook
+.ipynb_checkpoints
+
 # Virtual environments
 .venv/
 venv/
 
 # IDE
 .idea/
+
+# Large files
+*.csv
