--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,11 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "jupyter>=1.1.1",
+    "matplotlib>=3.9.2",
     "numpy>=2.1.2",
     "pandas>=2.2.3",
     "pathlib>=1.0.1",
+    "plotly>=5.24.1",
     "polars>=1.12.0",
+    "seaborn>=0.13.2",
 ]
