--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,6 @@ dependencies = [
     "pathlib>=1.0.1",
     "plotly>=5.24.1",
     "polars>=1.14.0",
+    "scikit-learn>=1.5.2",
     "seaborn>=0.13.2",
 ]
