--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "imbalanced-learn>=0.12.4",
     "jupyter>=1.1.1",
     "matplotlib>=3.9.2",
     "numpy>=2.1.3",
@@ -13,5 +14,6 @@ dependencies = [
     "plotly>=5.24.1",
     "polars>=1.15.0",
     "scikit-learn>=1.5.2",
+    "scipy>=1.14.1",
     "seaborn>=0.13.2",
 ]
