--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pathlib>=1.0.1",
     "plotly>=5.24.1",
     "polars>=1.15.0",
+    "python-dotenv>=1.0.1",
     "scikit-learn>=1.5.2",
     "scipy>=1.14.1",
     "seaborn>=0.13.2",
