--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "exoplanetdsa230"
-version = "0.1.0"
-description = "Add your description here"
+name = "exoplanet-dsa230"
+version = "0.1.5"
+description = "Finding exoplanets with machine learning."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
